mapped jobs
